src/objects/Case_manager_note__c.object
<CustomObject>
    <fields>
        <fullName>Case_Manager_Comments__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Case manager notes</relationshipLabel>
        <relationshipName>Case_manager_notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case manager notes</relationshipLabel>
        <relationshipName>Case_manager_notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Case_Manager_Comments__c</fullName>
        <label>Report - Case Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Case manager note</label>
    <nameField>
        <displayFormat>-{000000}</displayFormat>
        <label>Case manager note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case manager notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>